--- a/blogs/templates/profiles/profile_update.html
+++ b/blogs/templates/profiles/profile_update.html
@@ -53,7 +53,7 @@ Edit Profile
                     {% comment %} {{form.errors}} {% endcomment %}
                     <a href="{% url 'blogs:profile' user.pk %}" class="btn btn-danger mr-1">Cancel</a>
                     <div class="float-right">
-                        <input type="submit" class="btn btn-primary">
+                        <input type="submit" class="btn btn-primary" value="save">
                     </div>
                 </form>
             </div>
