--- a/blogs/templates/blogs/base.html
+++ b/blogs/templates/blogs/base.html
@@ -91,7 +91,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/tahmidimran/">
+              <a href="https://www.linkedin.com/in/tahmidimran/" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -99,7 +99,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://github.com/Tahmid2000">
+              <a href="https://github.com/Tahmid2000" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse"></i>
