--- a/blogs/templates/blogs/profile.html
+++ b/blogs/templates/blogs/profile.html
@@ -4,27 +4,33 @@ Profile
 {% endblock title %}
 {% block extra_css %}
 .delete-notif {
-  font-size: 150%;
-  opacity: .5;
+font-size: 150%;
+opacity: .5;
 }
 
 .delete-notif label:hover {
-  opacity: 1 important !;
-  color: #dc3545;
-  cursor: pointer;
-  transform: scale(1.15);
+opacity: 1 important !;
+color: #dc3545;
+cursor: pointer;
+transform: scale(1.15);
 }
 
 .modal-dialog{
-    overflow-y: initial !important;
+overflow-y: initial !important;
 }
 .modal-body{
-    height: 500px;
-    overflow-y: auto;
+height: 500px;
+overflow-y: auto;
+}
+@media (min-width: 659px) {
+.hidden-ss {
+display: none !important;
+}
 }
 {% endblock extra_css %}
 {% load blog_extras %}
 {% load static %}
+{% load hitcount_tags %}
 {% block header_body %}
 
 <!-- Page Header -->
@@ -56,12 +62,12 @@ Profile
               <div class="card" style="width: 40rem;">
                 <div class="card-body">
                   <div class="row">
-                    <div class="col-sm-3"><a href="" data-toggle="modal" data-target="#followers">Followers</a>:
-                      <span id="followers-count">{{followers.count}}</span></div>
-                    <div class="col-sm-3"><a href="" data-toggle="modal" data-target="#following">Following</a>:
-                      <span id="following-count">{{following.count}}</span></div>
-                    <div class="col-sm-3">Blogs: {{blogs_count}}</div>
-                    <div class="col-sm-3">Likes: {{like_count}}</div>
+                    <div class="col-sm-3"><span id="followers-count">{{followers.count}}</span> <a href="" data-toggle="modal" data-target="#followers">Followers</a>
+                      </div>
+                    <div class="col-sm-3"><span id="following-count">{{following.count}}</span> <a href="" data-toggle="modal" data-target="#following">Following</a>
+                      </div>
+                    <div class="col-sm-3">{{blogs_count}} Blogs</div>
+                    <div class="col-sm-3">{{like_count}} Likes</div>
                   </div>
                   <div class="modal fade" id="followers" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                     aria-hidden="true">
@@ -76,7 +82,8 @@ Profile
                         <div class="modal-body">
                           {% for follower in followers %}
                           <div class="float-left">
-                            <a href="{% url 'blogs:profile-detail' follower.follower.id %}" class="float-left">{{follower.follower}}</a><br>
+                            <a href="{% url 'blogs:profile-detail' follower.follower.id %}"
+                              class="float-left">{{follower.follower}}</a><br>
                             {% isFollowing follower.follower user as is_following %}
                             {% if is_following %}
                             <div class="float-left">
@@ -123,8 +130,8 @@ Profile
                         <div class="modal-body" id="following-modal">
                           {% for following in following %}
                           <div class="float-left">
-                          <a href="{% url 'blogs:profile-detail' following.following.id %}"
-                            class="float-left">{{following.following}}</a><br>
+                            <a href="{% url 'blogs:profile-detail' following.following.id %}"
+                              class="float-left">{{following.following}}</a><br>
                             {% isFollowing following.following user as is_following %}
                             {% if is_following %}
                             <div class="float-left">
@@ -214,10 +221,10 @@ Profile
               </h3>
               {% endif %}
             </a>
-            <p class="post-meta">Posted by
+            <p class="post-meta">Posted
               on {{blog.pub_date}}
             </p>
-            {% comment %} <br> {% endcomment %}
+            <br class="hidden-ss">
             <div class="d-flex justify-content-end" style="margin-top: -50px;">
               <a class="btn btn-warning mr-1" title="Make Private" href="{% url 'blogs:blog-update' blog.id %}"><i
                   class="fas fa-eye-slash"></i></a>
@@ -255,30 +262,53 @@ Profile
       </div>
     </div>
     <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-      <div class="card mt-3" style="box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)">
-        <div class="card-body">
-          About Me: {{user_profile.bio}}
-          <br>
-          <br>
-          Interests: {{user_profile.interests}}
-          <br>
-        </div>
-      </div>
-      <div class="card text-white bg-primary mt-3" style="box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)">
-        <div class="card-header">Twitter</div>
-        <div class="card-body">
-          <h5 class="card-title">{{user_profile.twitter}}</h5>
-        </div>
-      </div>
-      <div class="card mt-3" style="box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)">
-        <div class="card-body">
-          Twitter: 
-          
-          <br>
-          Portfolio: {{user_profile.portfolio}}
-          <br>
-        </div>
-      </div>
+      <div class="mt-3"></div>
+      <h2>About Me</h2>
+      {{user_profile.bio}}
+      <hr>
+      <div class="mt-3"></div>
+      <h2>Interests</h2>
+      {{user_profile.interests}}
+      <hr>
+      <h2>My Links</h2>
+      <ul class="list-inline text-center">
+        <li class="list-inline-item">
+          {% if user_profile.github %}
+          <a href="{{user_profile.github}}" target="_blank">
+            <span class="fa-stack fa-lg" style="font-size: 300%;">
+              <i class="fab fa-github"></i>
+            </span>
+          </a>
+        </li>
+        {% endif %}
+        {% if user_profile.twitter %}
+        <li class="list-inline-item">
+          <a href="{{user_profile.twitter}}" target="_blank">
+            <span class="fa-stack fa-lg" style="font-size: 300%;">
+              <i class="fab fa-twitter"></i>
+            </span>
+          </a>
+        </li>
+        {% endif %}
+        {% if user_profile.portfolio %}
+        <li class="list-inline-item">
+          <a href="{{user_profile.portfolio}}" target="_blank">
+            <span class="fa-stack fa-lg" style="font-size: 300%;">
+              <i class="fas fa-user"></i>
+            </span>
+          </a>
+        </li>
+        {% endif %}
+        {% if user_profile.linkedin %}
+        <li class="list-inline-item">
+          <a href="{{user_profile.linkedin}}" target="_blank">
+            <span class="fa-stack fa-lg" style="font-size: 300%;">
+              <i class="fab fa-linkedin"></i>
+            </span>
+          </a>
+        </li>
+        {% endif %}
+      </ul>
     </div>
     <div class="tab-pane fade" id="drafts" role="tabpanel" aria-labelledby="drafts-tab">
       <!-- Main Content -->
@@ -298,9 +328,9 @@ Profile
               {% endif %}
             </a>
             <p class="post-meta">Posted
-              on {{blog.pub_date}}
+              in drafts on {{blog.pub_date}}
             </p>
-            {% comment %} <br> {% endcomment %}
+            <br class="hidden-ss">
             <div class="d-flex justify-content-end" style="margin-top: -50px;">
               <a class="btn btn-warning mr-1" title="Make Public" href="{% url 'blogs:blog-update' blog.id %}"><i
                   class="fas fa-eye"></i></a>
@@ -363,8 +393,9 @@ Profile
               {% endif %}
               on {{blog.pub_date}}
             </p>
-            {% comment %} <br> {% endcomment %}
+            
             {% if user == blog.created_by %}
+            <br class="hidden-ss">
             <div class="d-flex justify-content-end mb-3" style="margin-top: -50px;">
               {% if blog.posted %}
               <a class="btn btn-warning mr-1" title="Make Private" href="{% url 'blogs:blog-update' blog.id %}"><i
@@ -378,6 +409,24 @@ Profile
                   <a class="btn btn-danger" title="Delete" href="{% url 'blogs:blog-delete' blog.id %}"><i
                       class="fas fa-trash-alt"></i></a>
             </div>
+            {% else %}
+            <div class="d-flex justify-content-end" style="margin-top: -50px;">
+                    {% commented_this_blog blog user.id as commented_this_blog %}
+                    {% if commented_this_blog %}
+                    <span style="color: #0085a1;">
+                    {% else %}
+                    <span>
+                    {% endif %}
+                    <i class="fas fa-comment-alt "></i></span>&thinsp;{{blog.comments.count}}  
+                    {% liked_this_blog blog user.id as liked_this_blog %}
+                    {% if liked_this_blog %}
+                    <span style="color: #dc3545;">
+                    {% else %}
+                    <span>
+                    {% endif %}
+                    <i class="fas fa-heart ml-2"></i></span>&thinsp;{{blog.likes.count}}
+                    <span class="ml-2"><i class="fas fa-eye"></i>&thinsp;{% get_hit_count for blog %}</span>
+                </div>
             {% endif %}
           </div>
           <hr>
@@ -416,7 +465,7 @@ Profile
             <div class="card-body" id="notification-card-body">
               {% if notifs %}
               {% for notif in notifs %}
-              <div class="media d-block d-md-flex" id="{{notif.pk}}">
+              <div class="media d-block d-md-flex" id="notification-{{notif.pk}}">
                 <div class="media-body text-center text-md-left ml-md-3 ml-0">
                   <h5 class="mt-0 font-weight-bold">
                     <a href="{% url 'blogs:profile-detail' notif.sender.id %}">{{notif.sender}}</a> {{notif.content}}
@@ -425,6 +474,7 @@ Profile
                     {% endif %}
                   </h5>
                   {{notif.pub_date}}
+
                   <form action="{% url 'blogs:delete-notif' notif.pk%}" method="POST"
                     id='delete-notif-form-{{notif.pk}}'>
                     {% csrf_token %}
@@ -470,7 +520,7 @@ Profile
             document.getElementById('notif-count').remove();
             document.getElementById('notif-count-nav').remove();
           }
-          document.getElementById(id).remove();
+          document.getElementById(`notification-${id}`).remove();
         }
       })
     });
@@ -494,22 +544,22 @@ Profile
             element.innerHTML = 'Unfollow';
             element.setAttribute('class', 'btn-primary btn float-right');
             element.style.color = "white";
-            if(element2){
+            if (element2) {
               element2.innerHTML = 'Unfollow';
               element2.setAttribute('class', 'btn-primary btn float-right');
               element2.style.color = "white";
             }
-            document.getElementById('following-count').innerHTML = number +1;
+            document.getElementById('following-count').innerHTML = number + 1;
           } else {
             element.innerHTML = 'Follow';
             element.setAttribute('class', 'btn-light btn float-right');
             element.style.color = "#0085a1";
-            if(element2){
+            if (element2) {
               element2.innerHTML = 'Follow';
               element2.setAttribute('class', 'btn-light btn float-right');
               element2.style.color = "#0085a1";
             }
-            document.getElementById('following-count').innerHTML = number -1;
+            document.getElementById('following-count').innerHTML = number - 1;
           }
         },
       });
