--- a/blogs/templates/blogs/profile.html
+++ b/blogs/templates/blogs/profile.html
@@ -27,6 +27,10 @@ overflow-y: auto;
 display: none !important;
 }
 }
+
+nav{
+  padding-right: 0 !important;
+}
 {% endblock extra_css %}
 {% load blog_extras %}
 {% load static %}
@@ -71,7 +75,7 @@ display: none !important;
                   </div>
                   <div class="modal fade" id="followers" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                     aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
                       <div class="modal-content">
                         <div class="modal-header">
                           <h5 class="modal-title" id="exampleModalLabel">Followers</h5>
@@ -119,7 +123,7 @@ display: none !important;
                   </div>
                   <div class="modal fade" id="following" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                     aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
                       <div class="modal-content">
                         <div class="modal-header">
                           <h5 class="modal-title" id="exampleModalLabel">Following</h5>
