--- a/blogs/templates/profiles/profile_detail.html
+++ b/blogs/templates/profiles/profile_detail.html
@@ -29,6 +29,9 @@ font-size: 80px;
 font-size: 40px !important;
 }
 }
+nav{
+  padding-right: 0 !important;
+}
 {% endblock extra_css %}
 {% block header_body %}
 
@@ -64,7 +67,7 @@ font-size: 40px !important;
                   </div>
                   <div class="modal fade" id="followers" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                     aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
                       <div class="modal-content">
                         <div class="modal-header">
                           <h5 class="modal-title" id="exampleModalLabel">Followers</h5>
@@ -115,7 +118,7 @@ font-size: 40px !important;
                   </div>
                   <div class="modal fade" id="following" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                     aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
                       <div class="modal-content">
                         <div class="modal-header">
                           <h5 class="modal-title" id="exampleModalLabel">Following</h5>
