--- a/blogs/templates/blogs/profile.html
+++ b/blogs/templates/blogs/profile.html
@@ -436,7 +436,7 @@ nav{
           <hr>
           {% endfor %}
           {% else %}
-          <p>You have no drafts.</p>
+          <p>You have no likes.</p>
           {% endif %}
         </div>
       </div>
