--- a/blogs/templates/profiles/profile_detail.html
+++ b/blogs/templates/profiles/profile_detail.html
@@ -1,6 +1,6 @@
 {% extends 'blogs/base.html' %}
 {% block title %}
-Profile - {{user_name}}
+Profile - {{user_profile}}
 {% endblock title %}
 {% load static %}
 {% load hitcount_tags %}
