--- a/blogs/templates/blogs/home.html
+++ b/blogs/templates/blogs/home.html
@@ -28,7 +28,7 @@ Home
 
   {% for message in messages %}
     <div class="container">
-      <div class="alert alert-primary" role="alert">
+      <div class="alert alert-success" role="alert">
         {{message}}
       </div>
     </div>
